--- a/TareaExamen/Proyecto3/Proyecto3.tex
+++ b/TareaExamen/Proyecto3/Proyecto3.tex
@@ -103,15 +103,15 @@ includefoot]{geometry}
 
 \end{definition}
 
-$$\text{a) } A = \{ (x,y) \in \mathbb{R}^2 \vert - 1 < x < 1, - 1 < y < 1 \}$$
+$\text{a) } A = \{ (x,y) \in \mathbb{R}^2 \vert - 1 < x < 1, - 1 < y < 1 \}$
 
-$$\text{b) }B = \{ (x,y) \in \mathbb{R}^2 \vert \,  0 < y  \}$$
+$\text{b) }B = \{ (x,y) \in \mathbb{R}^2 \vert \,  0 < y  \}$
 
-$$\text{c) }A = \{ (x,y) \in \mathbb{R}^2 \vert \, 2 < x^2  + y^2 <  4 \}$$\\[0.5cm]
+$\text{c) }A = \{ (x,y) \in \mathbb{R}^2 \vert \, 2 < x^2  + y^2 < 4\}$\\[0.5cm]
 2.  Calcule los siguientes. límites si existen: 
 \begin{definition}
 	Sea $ f: A \subset \R^n \to \R^m $ y $ \vec{x}_0 \in A $, un punto de acumulación de $ A $. Entonces se dice qe el límite de $  f(\vec{x}) $, cuando $ \vec{x} $ tiende a $ \vec{x}_0 $, es $ \vec{\textit{l}} \in \R^m $ y se denota
-	\[ \lim\limits_{\vec{x} \to \vec{x}_0} = \vec{\textit{l}} \qquad \text{ o } f(\vec{x}) \to \vec{\textit{l}} \]
+	\[ \lim\limits_{\vec{x} \to \vec{x}_0} = \vec{\textit{l}} \qquad \text{ o } \qquad f(\vec{x}) \to \vec{\textit{l}} \]
 	Si $ \forall \epsilon > 0, \quad \exists  \delta > 0 $ tal que $ \vec{x} \to \vec{x}_0 $
 \end{definition}
 
@@ -129,7 +129,7 @@ $$\text{b) }\displaystyle\lim_{(r\to 0} \dfrac{\sin(r) }{r}$$
 Y de nuestro curso de Matemáticas para las ciencias aplicadas I tenemos que $ \lim\limits_{\alpha \to 0} \dfrac{sin(\alpha)}{\alpha} = 1 $, por lo tanto
 $$\displaystyle\lim_{(x,y) \to (0,0)} \dfrac{\sin(xy) }{xy} = 1$$
 
-$$\text{c) }\displaystyle\lim_{x \to 1} (x^2 , e^x) $$\\[0.5cm]
+$\text{c) }\displaystyle\lim_{x \to 1} (x^2 , e^x) $\\[0.5cm]
 Tenemos un teorema enunciado en clase sobre las propiedades de los límites, una de ellas dice:
 \begin{definition}
 	Si $ f(\vec{x}) = (f_1(\vec{x}), \dots, f_m(\vec{x})) $ donde $ f_i:A \to \R  $, $ i \in \{ 1, \dots, m \} $  son las componentes de la función de $ f $, entonces 
@@ -142,13 +142,40 @@ entonces si
 	\lim_{x \to 1} (x^2 , e^x) &=\left( 1,  e \right)\\
 \end{align*}
 
-3.  Usando la formulación $\epsilon$-$\delta$ muestre: \\
+\noindent3.  Usando la formulación $\epsilon$-$\delta$ muestre: \\
 
  $$ \text{a) } \displaystyle\lim_{(x,y,z) \to (0,0,0)} \dfrac{xyz}{x^2 + y^2 + z^2} = 0$$\\
 
 $$\text{b) }\displaystyle\lim_{(x,y) \to (0,0)} \dfrac{xy }{\sqrt{x^2 + y^2}} = 0$$\\
 
 $$\text{c) }\displaystyle\lim_{x \to 2} (3x , x^2) = (6,4) $$\\[0.5cm]
+Por lo mencionado anteriormente,  $ \lim_{x \to 2} (3x , x^2) = (6,4) $ puede expresarse como 
+\[  (\lim_{x \to 2} 3x , \lim_{x \to 2}x^2) = (6,4)\]
+por lo tanto, para el primer caso.\\
+\begin{proof}
+	Sea $ \epsilon > 0 $, consideremos 
+	\begin{align*}
+		\abs{f(x) - l} &= \abs{3x - 6}\\
+		\abs{f(x) - l} &= 3\abs{x - 2} && \text{Observemos que } \abs{x - a} = \abs{x - 2}\\
+	\end{align*}
+	Así, basta tomar $ \delta = \dfrac{\epsilon}{2} $
+\end{proof}
+Luego, para el segundo valor
+\begin{proof}
+	Sea $ \epsilon > 0 $, veamos que
+	\begin{align*}
+		\abs{f(x) - l} &= \abs{x^2 - 4}\\
+		\abs{f(x) - l} &= \abs{x - 2}\abs{x + 2}\\
+	\end{align*}
+	Por otra parte, sea $ \delta_0 = 1 $
+	\begin{align*}
+		\abs{x -2} &< 1\\
+		-1< x -2 &< 1\\
+		3< x +2 &< 5\\
+		\abs{x+2} &< 5\\
+	\end{align*}
+	De esta manera basta tomar $ \delta = min \left\lbrace 1, \dfrac{\epsilon}{5}\right\rbrace $
+\end{proof}
 4.  Sea $f: \mathbb{R}^2  \longrightarrow \mathbb{R}$ tal que $f(x,y) = \left\{
      \begin{array}{cl}
        \dfrac{x^2y}{\vert x \vert^3 + y^2} & : \text{ si } (x,y) \neq (0,0)\\
@@ -184,9 +211,9 @@ Sea $ \epsilon > 0 $, consideremos $ \norm{f(x,y) - l} $, donde $ f(x,y) = \dfra
 \end{align*}
 luego, veamos que $ \abs{\dfrac{x^2y}{x^2}} = \abs{y} = \sqrt{y^2} $ y como $ 0 \leq y^2 \leq y^2 + x^2 $ tenemos que
 \begin{align*}
-	\abs{\dfrac{x^2y}{\abs{x}^3 + y^2}} &\leq \abs{y} = \sqrt{y^2}\\
-	\abs{\dfrac{x^2y}{\abs{x}^3 + y^2}} &\leq \sqrt{y^2}\\
-	\abs{\dfrac{x^2y}{\abs{x}^3 + y^2}} &\leq \sqrt{y^2} \leq \sqrt{x^2 + y^2}\\
+	\abs{\dfrac{x^2y}{\abs{x}^3 + y^2}} &\leq \abs{y} = \sqrt{y^2} && \text{Definición de valor absoluto}\\
+	\abs{\dfrac{x^2y}{\abs{x}^3 + y^2}} &\leq \sqrt{y^2} && \text{Por la igualdad planteada arriba}\\
+	\abs{\dfrac{x^2y}{\abs{x}^3 + y^2}} &\leq \sqrt{y^2} \leq \sqrt{x^2 + y^2}&& \text{Por la observación del inicio}\\
 	\abs{\dfrac{x^2y}{\abs{x}^3 + y^2}} &\leq \sqrt{y^2} \leq \sqrt{x^2 + y^2} && \text{Puesto que }\sqrt{x^2 + y^2} = \norm{(x,y)} \\
 	\abs{\dfrac{x^2y}{\abs{x}^3 + y^2}} &\leq \sqrt{y^2} \leq \norm{(x,y)} < \epsilon && \text{Por hipótesis} \\
 	\abs{\dfrac{x^2y}{\abs{x}^3 + y^2}} &\leq \norm{(x,y)} < \epsilon \\
