Antes del esbozo del profesor

--- a/TareaExamen/Proyecto3/Proyecto3.tex
+++ b/TareaExamen/Proyecto3/Proyecto3.tex
@@ -104,11 +104,13 @@ includefoot]{geometry}
 \end{definition}
 
 $\text{a) } A = \{ (x,y) \in \mathbb{R}^2 \vert - 1 < x < 1, - 1 < y < 1 \}$
-\begin{figure}[h]
+\begin{figure}[h!]
 	\centering
 	\includegraphics[width=0.3\textwidth]{1a}
 	\caption{En el plano sólo la intersección es el conjunto A}
 \end{figure}
+
+Tomemos $ r = min\{min \{  1- x, x + 1\}, min\{ 1-y, y+1 \} \}$, pues de esta manera aseguraremos que cualquier bola tendrá un radio en los límites del conjuto A. Ahora, sea $ (x_1, y_1) \in A $ entonces 
 
 $\text{b) }B = \{ (x,y) \in \mathbb{R}^2 \vert \,  0 < y  \}$
 \begin{figure}[h]
